force-app/main/default/objects/Document__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Application_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>