force-app/main/default/objects/Document__c/fields/Document_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Document_Template_Id__c</fullName>
    <label>Document Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>